bk_ida/gccida/g2/get_attr_prefix_0f
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20290:4: error: expected ';' after expression
rtx v10; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20290:5: error: use of undeclared identifier 'v10'
rtx v10; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20310:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v11 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20312:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20312:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 20323, "get_attr_prefix_0f"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20412:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !aligned_operand( recog_data_0.operand[1], HImode) ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20450:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20511:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20512:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20513:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
rtx = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20521:1: error: use of undeclared identifier 'v10'
v10 = recog_data_0.operand[0]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20521:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v10 = recog_data_0.operand[0]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20522:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[0] == 67 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20523:1: error: use of undeclared identifier 'v10'
v10 = recog_data_0.operand[0]->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20523:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v10 = recog_data_0.operand[0]->fld[0].rtx; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20524:30: error: use of undeclared identifier 'v10'; did you mean 'v11'?
v9 = insn_addresses_->data.i[v10->fld[0].rtint]; 
                             ^~~
                             v11
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/insn-attrtab.c:20291:18: note: 'v11' declared here
 struct rtx_def *v11; // rdi 
                 ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_prefix_0f/src/obj/insn-attrtab.o] Error 1
